# cosmic-applet-now-playing

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_applet_now_playing.ftl
resources/: app.desktop
src/: app.rs  config.rs  i18n.rs  main.rs  mpris.rs
