[package]
name = "cosmic-applet-now-playing"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Now Playing applet for COSMIC Desktop — inline panel art, label, and controls"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
anyhow = "1"
i18n-embed-fl = "0.9"
mpris = "2"
reqwest = { version = "0.12", features = ["default-tls"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "autosize",
    "dbus-config",
    "tokio",
    "wayland",
]

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
